# ai-account-switcher

./: .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  LICENSE  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
docs/: gemini-feature-implementation-plan.md  release-notes-v0.3.0.md  spec.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md
scripts/: acceptance-smoke.sh
switcher/: __init__.py  cli.py  config.py  discovery.py  errors.py  health.py  installer.py  state.py  ui.py  ui_menu.py  utils.py
switcher/auth/: __init__.py  codex_auth.py  codex_memory.py  codex_plugins.py  codex_sandbox.py  gemini_auth.py  keyring_backend.py
switcher/hooks/: __init__.py  gemini_after_agent.py  gemini_before_agent.py  quota_patterns.py
switcher/profiles/: __init__.py  base.py  codex.py  gemini.py
tests/: conftest.py  test_before_agent.py  test_cli.py  test_cli_menu.py  test_cli_oauth_recovery.py  test_cli_switch_ux.py  test_codex_isolation.py  test_config.py  test_discovery.py  test_errors.py  test_gemini_after_agent_patterns.py  test_gemini_auth.py  test_health.py  test_hook_handoff_state.py  test_hooks.py  test_installer.py  test_keyring_backend.py  test_new_cli_commands.py  test_profiles_codex.py  test_profiles_gemini.py  test_state.py  test_ui.py  test_utils.py
