[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["switcher"]

[project]
name = "cli-switcher"
version = "0.1.1"
description = "Unified multi-account manager for Gemini CLI and Codex CLI on Ubuntu/Linux"
readme = "README.md"
license = "MIT"
requires-python = ">= 3.10"
keywords = ["gemini", "codex", "cli", "auth", "account-switcher"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "keyring >= 25.0",
    "requests >= 2.28",
    "tomli-w >= 1.0",
    "tomli >= 2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "pytest-cov >= 5.0",
    "ruff >= 0.9",
    "mypy >= 1.13",
    "types-requests",
]

[project.scripts]
switcher = "switcher.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
